Adding ext to modifiedRunOrder

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     <module>maven-failsafe-plugin</module>
     <module>maven-surefire-report-plugin</module>
     <module>surefire-its</module>
+    <module>surefire-changing-maven-extension</module>
   </modules>
 
   <scm>
@@ -477,6 +478,117 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M3</version>
+        <executions>
+          <execution>
+            <id>enforce-java</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <!-- We use JDK 1.8 to check -Xdoclint:all at compile time but with javac -source 1.7 -target 1.7 -->
+                  <version>[1.8, )</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>[3.1.0,)</version>
+                </requireMavenVersion>
+              </rules>
+            </configuration>
+          </execution>
+          <execution>
+            <id>enforce-bytecode-version</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <enforceBytecodeVersion>
+                  <maxJdkVersion>${maven.compiler.target}</maxJdkVersion>
+                  <excludes>
+                    <exclude>org.junit.platform:junit-platform-commons</exclude>
+                    <exclude>org.assertj:assertj-core</exclude>
+                  </excludes>
+                </enforceBytecodeVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <fail>true</fail>
+        </configuration>
+      </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>bsh-property</id>
+                    <goals>
+                        <goal>bsh-property</goal>
+                    </goals>
+                    <configuration>
+                        <properties>
+                            <property>jdkHome</property>
+                            <property>doSkipTests</property>
+                            <property>jvm9ArgsTests</property>
+                        </properties>
+                        <source>
+                            jdkHome = session.getUserProperties().getProperty("jdkHome", project.getProperties().getProperty("jdkHome"));
+                            if (jdkHome == null || jdkHome.isEmpty()) {
+                                jreHome = System.getProperty("java.home");
+                                jrePath = new File(jreHome);
+                                jdkHome = "jre".equals(jrePath.getName()) ? jrePath.getParent() : jrePath.getPath();
+                            }
+                            <!-- release = new File(jdkHome, "release"); -->
+                            System.out.println("Beanshell found jdkHome=" + jdkHome);
+                            <!-- System.out.println("Beanshell found jdk-release properties file=" + release.exists()); -->
+                            <!-- props = new Properties(); -->
+                            <!-- reader = new FileReader(release); -->
+                            <!-- props.load(reader); -->
+                            <!-- reader.close(); -->
+                            <!-- javaVersion = props.getProperty("JAVA_VERSION").replace("\"", ""); -->
+			    javaVersion = "1.8.0_282";
+                            System.out.println("Beanshell found java version for tests " + javaVersion);
+                            majorJavaVersion = Integer.parseInt(javaVersion.substring(0, javaVersion.contains(".") ? javaVersion.indexOf('.') : javaVersion.length()));
+                            isSkippedTests = project.getProperties().getProperty("skipTests", session.getUserProperties().getProperty("skipTests"));
+                            if (isSkippedTests == null) {
+                                isSkippedTests = "false";
+                            }
+
+                            skip = isSkippedTests;
+                            args = "--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/sun.nio.fs=ALL-UNNAMED --add-opens java.base/sun.nio.cs=ALL-UNNAMED --add-opens java.base/java.nio.file=ALL-UNNAMED --add-opens java.base/java.nio.charset=ALL-UNNAMED";
+
+                            if (majorJavaVersion == 1) {
+                                isJava7 = javaVersion.matches("^1\\.7.*");
+                                skip = "surefire-junit-platform".equals(project.getArtifactId()) ? "" + (Boolean.parseBoolean(isSkippedTests) || isJava7) : isSkippedTests;
+                                args = "";
+                            }
+
+                            doSkipTests = skip;
+                            jvm9ArgsTests = args;
+
+                            System.out.println("Beanshell doSkipTests=" + doSkipTests);
+                            System.out.println("Beanshell jvm9ArgsTests=" + jvm9ArgsTests);
+                        </source>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
